A small gap fix

--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ body {
     display: inline-block;
     width: 60px;
     height: 34px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .switch input {
